--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<button type="button" onclick="print()">Print</button>
+<button type="button" (click)="print()">Print</button>
+<button type="button" (click)="saveLocalStorage()">Guardar en local storage</button>
