--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<button type="button" (click)="print()">Print</button>
-<button type="button" (click)="saveLocalStorage()">Guardar en local storage</button>
-<button type="button" (click)="showMessage()">Mensaje</button>
+<button type="button" (click)="sendTicketData()">Print ticket</button>
